[package]
name = "ic-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8"
colored = "2.1.0"
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }